# full-stack-fastapi-postgresql

{{cookiecutter.project_slug}}/: docker-compose.yml
{{cookiecutter.project_slug}}/backend/app/: pyproject.toml
{{cookiecutter.project_slug}}/frontend/: Dockerfile
