[tool.poetry]
name = "app"
version = "0.1.1"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python 
uvicorn 
fastapi 
python-multipart 
email-validator
requests
celery
passlib = {extras = ["bcrypt"]}
tenacity 
pydantic 
emails 
raven 
gunicorn
jinja2 
psycopg2-binary 
alembic
sqlalchemy
pytest
python-jose = {extras = ["cryptography"]}
asyncio
gspread-asyncio
fastapi-mail
gspread
httpx
uuid
requests
asyncpg
psycopg2-binary
sqlmodel

[tool.poetry.dev-dependencies]
mypy 
black 
isort 
autoflake 
flake8 
pytest 
sqlalchemy-stubs
pytest-cov

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

